# fix-engine

./: CROSS-COMPILATION.md  Cargo.toml  Makefile  README.md
.forgejo/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: context.rs  engine.rs  goose_client.rs  language.rs  lib.rs  llm_client.rs  progress.rs  registry.rs  syntax_check.rs
crates/java-fix/: Cargo.toml
crates/java-fix/src/: lib.rs
crates/js-fix/: Cargo.toml
crates/js-fix/src/: lib.rs  lockfile.rs
src/: main.rs  progress.rs
src/cli/: fix.rs  mod.rs
