[workspace]
members = ["crates/core", "crates/engine", "crates/js-fix"]
resolver = "2"

[workspace.dependencies]
konveyor-core = "0.0.5"

[patch.crates-io]
konveyor-core = { path = "../konveyor-core" }

[package]
name = "fix-engine-cli"
version = "0.0.2"
edition = "2021"
description = "Generic fix engine CLI for applying pattern-based and LLM-assisted code migration fixes"
license = "Apache-2.0"

[dependencies]
fix-engine-core = { version = "0.0.2", path = "crates/core" }
fix-engine = { version = "0.0.2", path = "crates/engine" }
fix-engine-js-fix = { version = "0.0.2", path = "crates/js-fix" }
konveyor-core = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"

# Error handling
anyhow = "1"

# Progress & terminal output
indicatif = "0.17"
owo-colors = { version = "4", features = ["supports-colors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

