[package]
name = "fix-engine-core"
version = "0.0.1"
edition = "2021"
description = "Core types for the fix engine: text edits, fix plans, strategies"
license = "Apache-2.0"

[dependencies]
konveyor-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
anyhow = "1"
