[package]
name = "fix-engine"
version = "0.0.2"
edition = "2021"
description = "Language-agnostic fix engine for applying pattern-based and LLM-assisted code migration fixes"
license = "Apache-2.0"

[dependencies]
fix-engine-core = { version = "0.0.2", path = "../core" }
konveyor-core = { workspace = true }

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for LLM endpoint)
# Uses rustls instead of native-tls (OpenSSL) to enable cross-compilation
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
regex = "1"

# Progress reporting
indicatif = "0.17"
owo-colors = "4"

# Logging
tracing = "0.1"

# Unix process management (process group cleanup for goose subprocess)
[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["term"] }

[dev-dependencies]
tempfile = "3"
