[package]
name = "fix-engine-js-fix"
version = "0.0.1"
edition = "2021"
description = "JS/TS/JSX/TSX language-specific fix operations for the fix engine"
license = "Apache-2.0"

[dependencies]
fix-engine-core = { version = "0.0.1", path = "../core" }
fix-engine = { version = "0.0.1", path = "../engine" }
konveyor-core = "0.0.4"

# Serialization (for incident variable inspection)
serde_json = "1"
serde_yaml = "0.9"

# HTTP (sync) for npm registry queries
ureq = { version = "3", features = ["json"] }

# Logging
tracing = "0.1"

# Utilities
regex = "1"

[dev-dependencies]
tempfile = "3"
