[package]
name = "fix-engine-js-fix"
version = "0.0.1"
edition = "2021"
description = "JS/TS/JSX/TSX language-specific fix operations for the fix engine"
license = "Apache-2.0"

[dependencies]
fix-engine-core = { version = "0.0.1", path = "../core" }
fix-engine = { version = "0.0.1", path = "../engine" }
konveyor-core = { workspace = true }

# Serialization (for incident variable inspection)
serde_json = "1"
serde_yaml = "0.9"

# HTTP (sync) for npm registry queries
ureq = { version = "3", features = ["json"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"

# Utilities
regex = "1"

# npm-compatible semver range parsing and comparison
node-semver = "2"

[dev-dependencies]
tempfile = "3"
